[project]
name = "openingday"
version = "0.9.0"
description = "Compute opening hours from YAML schedules to check if a venue is open, for websites and booking systems."
authors = [
    {name = "Francesco Maida",email = "francesco.maida@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
